# rx-shortage-mcp

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docs/: DESIGN.md  JOURNAL.md  WRITING-STYLE.md
src/rx_shortage_mcp/: __init__.py  __main__.py  openfda.py  rxnav.py  safety.py  server.py
tests/: eval_cases.py  test_alternatives.py  test_drug_class.py  test_evals.py  test_mcp_protocol.py  test_normalize.py  test_safety_gate.py  test_shortage.py
